--- a/Installationspaket/index.html
+++ b/Installationspaket/index.html
@@ -41,7 +41,7 @@
                     <img id="hartmann" src="css/logo.png" />
                 </div>
 				
-				<h2 style="color:white; align:rigth">
+				<h2 id="sprache">
 						DE
 				</h2>
 				
