--- a/Installationspaket/index.html
+++ b/Installationspaket/index.html
@@ -41,9 +41,9 @@
                     <img id="hartmann" src="css/logo.png" />
                 </div>
 				
-				<h2 id="sprache">
+				<p id="sprache">
 						DE
-				</h2>
+				</p>
 				
 			
                 <div id="uber">
